--- a/templates/plotly.html
+++ b/templates/plotly.html
@@ -7,6 +7,6 @@
 
         
         <!-- JavaScript file -->
-        <script type="text/javascript" src="js/leaflet.js"></script>
+        <script type="text/javascript" src="js/plotly.js"></script>
       <!-- </div> -->
     </body>
