--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -130,7 +130,7 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-#accordion_layout {
+.accordion_layout {
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -11386,7 +11386,7 @@ html {
 
 #sidebar-wrapper {
   position: fixed;
-  z-index: 2;
+  z-index: 100;
   right: 0;
   width: 250px;
   height: 100%;
@@ -11521,17 +11521,29 @@ body {
   margin: 0;
 }
 
-#map
+/* #map
  {
     height: 100%;
     width: 100%;
+} */
+
+#map {
+  position: relative;
+  border: 1px solid black;
+  border-radius: 20px;
+  margin-left: 5%;
+  margin-right: 5%;
+  height: 60%;  /* or as desired */
+  width: 90%;  /* This means "100% of the width of its container", the .col-md-8 */
+  z-index: 80;
+  background-color: #f5f5dc;
 }
 
 #map-leaflet {
   height:800px;
 }
 
-#button_accord {
+.button_accord {
   background: #155d74;
   color:white;
 }
